--- a/src/main/webapp/static/css/common.css
+++ b/src/main/webapp/static/css/common.css
@@ -422,17 +422,17 @@ footer {
     color: #ff6f61;
     border-color: #ff6f61;
 }
+
 .products-section {
-    position: relative;
-    padding-top: 20px;
+    max-width: 1200px;
+    margin:0 auto;
+    padding: 0 50px;
 }
 
 .sort-bar {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-bottom: 20px;
-    padding: 0 350px;
 }
 
 #sortForm {
