--- a/src/main/webapp/static/css/cartPage.css
+++ b/src/main/webapp/static/css/cartPage.css
@@ -104,7 +104,7 @@
     gap: 8px;
 }
 
-.modify-quantity-cart {
+#plus, #minus, #remove {
     background-color: #af8907;
     border: none;
     color: #333;
@@ -115,7 +115,7 @@
     transition: background-color 0.3s ease;
 }
 
-.modify-quantity-cart:hover {
+#plus:hover, #minus:hover, #remove:hover {
     background-color: #918358;
 }
 
